[package]
name = "yabfi"
version = "1.0.0"
edition = "2021"
description = "⚡blazingly fast brainf**k interpreter made in rust (yet another brainf**k interpreter)"
authors = ["Gurkan <hello@gurkz.me>"]
license = "LGPL-3.0"
homepage = "https://github.com/thatgurkangurk/bf"
keywords = ["cli", "interpreter", "brainfk", "esoteric"]
repository = "https://github.com/thatgurkangurk/bf"
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
