[package]
name = "yabfr"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
version = "1.1.0"
edition = "2021"
description = "⚡blazingly fast brainf**k interpreter made in rust (yet another brainf**k _in_ rust)"
authors = ["Gurkan <hello@gurkz.me>"]
license = "LGPL-3.0"
homepage = "https://github.com/thatgurkangurk/bf"
keywords = ["cli", "interpreter", "brainfk", "esoteric"]
repository = "https://github.com/thatgurkangurk/bf"
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
